[tool.poetry]
name = "rustbininfo"
version = "0.5.5"
description = "Get information about stripped rust executables"
authors = ["Nofix <16479266+N0fix@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rustbininfo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
rich = "^13.7.1"
yara-python = "^4.5.0"
requests = "^2.32.3"
semver = "^3.0.2"
pydantic = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rustbininfo = "rustbininfo.main:main_cli"
rbi = "rustbininfo.main:main_cli"

[tool.ruff]
line-length=120

[tool.ruff.lint]
select=["ALL"]
ignore=[
    "INP001",
    "D100",
    "A004",
    "TID252",
    "S324",
]
