[project]
name = "rustbininfo"
version = "0.7.0"
description = "Get information about stripped rust executables"
authors = [{name="Nofix", email="16479266+N0fix@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beaker>=1.13.0",
    "pydantic>=2.10.6",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "semver>=3.0.4",
    "xdg-base-dirs>=6.0.2",
    "yara-python>=4.5.1",
]

[project.scripts]
rustbininfo = "rustbininfo.main:main_cli"
rbi = "rustbininfo.main:main_cli"

[project.optional-dependencies]
gitpython = [
    "gitpython>=3.1.44",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = ["ALL"]
ignore=[
    "INP001",
    "D100",
    "A004",
    "TID252",
    "S324",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.8",
]
